# sql-injection-demo

./: .pre-commit-config.yaml  README.md  explain_sql_injection.py  index.py  init_schema.sql  outline.md  pyproject.toml  requirements.in  requirements.txt
advanced_site/: .env  .env.example  index.py  run_server.py  utils.py
advanced_site/db/: gen_students.py  gen_users.py  init_schema.sql
advanced_site/exploits/: find_users.py
advanced_site/templates/: add_students.html  base.html  base_no_query.html  index.html  login.html  logout.html  nav.html  post_login.html
basic_site/: basic_site.py  basic_site_no_persistence.py  basic_site_with_persistence.py  student_dashboard.html  students.csv
templates/: add_students.html  base.html  index.html  login.html  login_required.html  nav.html  post_login.html  queries.html
