[tool.poetry]
name = "sql_injection_talk"
version = "0.1.0"
description = ""
authors = ["Thomas Chamberlin <tchamber@nrao.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
bottle = "^0.12.19"
psycopg2-binary = "^2.9.1"
Jinja2 = "^3.0.1"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
ipython = "^7.24.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
